* Refactored the environment viewer * Removed references to renderables in the updateableobject class * Added a tab to see information about the map data to the diagnostic window